# gold-price-tracker

./: .gitignore  Makefile  README.md  docker-compose.yaml  init-db.sh  package-lock.json  package.json
aws/: aws_ecs_update_instructions.md  cleanup_docker.sh  ecs-service-definition-ec2.json  enable_ecs.sh  reset_postgres_data.sh
backend/gold_price_service/: Cargo.toml  Dockerfile
backend/gold_price_service/src/: main.rs
backend/mjw_services/: Dockerfile  entrypoint.sh  manage.py  requirements.txt  wait-for-it.sh
backend/mjw_services/gold_rate_admin/: apps.py  models.py  urls.py  views.py
backend/mjw_services/gold_rate_admin/migrations/: 0001_initial.py  0002_rate_arhiant_rate_24kt_rate_arihant_rate_22kt.py
backend/mjw_services/mjw_services/: asgi.py  settings.py  urls.py  wsgi.py
backend/mjw_services/scripts/: gold_rate_update.py
db/: Dockerfile  init-db.sh
frontend/: .dockerignore  Dockerfile  Dockerfile.dev  next.config.mjs  package-lock.json  package.json  tailwind.config.js  tsconfig.json
frontend/.next/: trace
frontend/.next/server/: next-font-manifest.js  next-font-manifest.json  server-reference-manifest.js  server-reference-manifest.json  webpack-runtime.js
frontend/__tests__/: gold_price.test.tsx  page.test.tsx
frontend/src/app/: MainContent.tsx  layout.tsx  page.tsx
frontend/src/components/: footer.tsx  header.tsx  image_card.tsx  price_cards.tsx  price_series_chart.tsx
frontend/src/pages/: admin.tsx
misc/: generate_api_key.py
src/app/: globals.css  layout.tsx  page.tsx
src/components/: price_series_chart.tsx
(+43 files in other folders)
